Fix footer on safari browser issues

--- a/css/newcss.css
+++ b/css/newcss.css
@@ -129,7 +129,7 @@ ul li{
 
 }
 .index-footer{
-    position: fixed;
+    position: absolute;
     width: 100vw;
     /*height: 100vh;*/
 }
